<resources>
    <string name="app_name">Project02</string>
    <string name="sign_up_title">Please Sign Up</string>
    <string name="username_hint">Enter Username</string>
    <string name="password_hint">Enter Password</string>
    <string name="re_enter_password_hint">Re-Enter Password</string>
    <string name="next">Next</string>
    <string name="preference_file_key">PillHUBPreferenceFileKey</string>
    <string name="preference_userId_key">PillHUBPreferenceUserIdKey</string>
    <string name="patients">Patients</string>
    <string name="delete_user">Delete Patient</string>
    <string name="back">Back</string>
    <string name="enter_patient_to_delete">Enter patient to delete</string>
</resources>