<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Database.SignUpActivity">

    <TextView
        android:id="@+id/pleaseSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/enterSignUpUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        app:layout_constraintTop_toBottomOf="@id/pleaseSignUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/enterSignUpPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/enterSignUpUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/reEnterSignUpPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/re_enter_password_hint"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/enterSignUpPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintTop_toBottomOf="@id/reEnterSignUpPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>